2009-01-25  Gabor Csardi  <csardi@szaffi>

	* src/strucural_properties.c (igraph_path_length_hist) : 
	fixed a bug, 'unconnected' was wrong for undirected graphs

2009-01-16  Gabor Csardi  <csardi@szaffi>

	* src/foreign-graphml.c
	(igraph_i_graphml_sax_handler_end_document) : check whether 
	we already have an 'id' vertex or edge attribute, give a warning 
	if we cannot add the intrinsic 'id' attribute(s) because of this

	* src/vector_ptr.c (igraph_vector_ptr_pop_back) : added

2009-01-09  Gabor Csardi  <csardi@szaffi>

	* src/heap.c (igraph_2wheap_check) : correct checking, this is 
	not a minimum heap, but a maximum...

2008-11-14  Gabor Csardi  <csardi@szaffi>

	* src/bipartite.c (igraph_is_bipartite) : added

2008-11-10  Gabor Csardi  <csardi@szaffi>

	* src/structural_properties.c (igraph_shortest_path_johnson) : 
	added support for 'to' argument

	* src/heap.c (igraph_2wheap_deactivate_max) : bug corrected

2008-11-07  Gabor Csardi  <csardi@szaffi>

	* src/structural_properties.c 
	(igraph_shortest_paths_bellman_ford) : implement 'to' argument

2008-11-05  Gabor Csardi  <csardi@szaffi>

	* src/structural_properties.c (igraph_shortest_paths_dijkstra) : 
	added support for 'to' argument

	* src/heap.c (igraph_2wheap_deactivate_max) 
	(igraph_2wheap_has_active) : added, elements can
	be inactive now

2008-11-04  Gabor Csardi  <csardi@szaffi>

	* src/centrality.c (igraph_closeness_estimate_weighted) : 
	use the two-way heap

	* src/centrality.c (igraph_betweenness_estimate_weighted) : 
	use the two-way heap

	* src/structural_properties.c (igraph_get_shortest_paths_dijkstra) :
	use the two-way heap

	* src/structural_properties.c (igraph_shortest_paths_dijkstra) : 
	use the two-way heap

	* src/heap.c (igraph_2wheap_t) : added
	* examples/simple/2wheap.c : added

	* src/structural_properties.c (igraph_shortest_paths) : 
	'to' argument added
	(igraph_shortest_paths_dijkstra, igraph_shortest_paths_bellman_ford)
	(igraph_shortest_paths_johnson) :