@@ -352,12 +352,15 @@ igraph_betweenness_estimate:
         FLAGS: PROGRESS
 
 igraph_edge_betweenness:
-        PARAMS: GRAPH graph, OUT VECTOR res, BOOLEAN directed=True
-        IGNORE: RR, RC, RNamespace
+        PARAMS: GRAPH graph, OUT VECTOR res, BOOLEAN directed=True, \
+                EDGEWEIGHTS weights=NULL
+        DEPS: weights ON graph
+        NAME-R: edge.betweenness
 
 igraph_edge_betweenness_estimate:
         PARAMS: GRAPH graph, OUT VECTOR res, BOOLEAN directed=True, \
-                REAL cutoff
+                REAL cutoff, EDGEWEIGHTS weights=NULL
+        DEPS: weights ON graph
         NAME-R: edge.betweenness.estimate
 
 igraph_pagerank_old:
