@@ -1,3 +1,8 @@
+2009-02-21  Gabor Csardi  <csardi@szaffi>
+
+	* src/centrality.c (igraph_edge_betweenness_estimate)
+	(igraph_edge_betweenness) : add support for weights
+
 2009-01-25  Gabor Csardi  <csardi@szaffi>
 
 	* src/strucural_properties.c (igraph_path_length_hist) : 
